--- a/index.html
+++ b/index.html
@@ -208,32 +208,12 @@
 
 
                                     <div class="et_pb_row et_pb_row_0">
-                                        <div
-                                            class="et_pb_column et_pb_column_2_3 et_pb_column_0    et_pb_css_mix_blend_mode_passthrough">
-
-
                                             <div class="et_pb_module et_pb_code et_pb_code_0">
-
-
                                                 <div class="et_pb_code_inner">
                                                     <!-- Stream twitch.tv/twitchsquads -->
+                                                    <div id="twitch-embed"></div>
                                                 </div> <!-- .et_pb_code_inner -->
                                             </div> <!-- .et_pb_code -->
-                                        </div> <!-- .et_pb_column -->
-                                        <div
-                                            class="et_pb_column et_pb_column_1_3 et_pb_column_1    et_pb_css_mix_blend_mode_passthrough et-last-child">
-
-
-                                            <div class="et_pb_module et_pb_code et_pb_code_1">
-
-
-                                                <div class="et_pb_code_inner">
-                                                    <!-- Chat twitch.tv/twitchsquads -->
-                                                </div> <!-- .et_pb_code_inner -->
-                                            </div> <!-- .et_pb_code -->
-                                        </div> <!-- .et_pb_column -->
-
-
                                     </div> <!-- .et_pb_row -->
 
 
@@ -753,10 +733,17 @@
     <script type="text/javascript" src="js/custom.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/wp_footer.js"></script>
-    <script type="text/javascript"
-        src="js/wp-embed.min.js"></script>
+    <script type="text/javascript" src="js/wp-embed.min.js"></script>
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
-
+    <script type="text/javascript">
+        new Twitch.Embed("twitch-embed", {
+          width: '100%',
+          height: 720,
+          channel: "twitchsquads",
+          layout: 'video'
+        });
+    </script>      
 </body>
 
 </html>
