Remove WildCode from footer

--- a/index.html
+++ b/index.html
@@ -682,8 +682,7 @@
 
                 <div id="footer-bottom">
                     <div class="container clearfix">
-                        <div id="footer-info">Powered and Designed by <a href="https://www.wildcode.de/"
-                                target="_blank">WildCode</a></div>
+                        <div id="footer-info"></div>
                     </div> <!-- .container -->
                 </div>
             </footer> <!-- #main-footer -->
