Team: Felix, Simon

--- a/team.html
+++ b/team.html
@@ -38,6 +38,7 @@ permalink: /team/
 
         .team-member {
             color: white;
+            margin-bottom: 50px;
         }
 
         .team-member .image {
@@ -95,7 +96,52 @@ permalink: /team/
                                     gründen und
                                     zu einer großen Community aufzubauen.
                                 </p>
-                                <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
+                                <p class="contact"><a
+                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="team-member">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image is-128x128">
+                                    <img class="is-rounded team-member-image" src="../img/team/felix.jpg">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <p class="name">Felix Romanrus</p>
+                                <p>
+                                    Felix bringt sein Know-How in Sachen Marketingkonzepte und Social Media ein. Seine
+                                    langjährige Erfahrung im Bereich Social Media (beruflicher Background), sowie die
+                                    Spezialisierung zum Fachkaufmann für Marketing helfen dabei die TwitchSquads
+                                    Community für die Zukunft vorzubereiten. Sein Aufgabenbereich wird durch Stephan
+                                    weiter unterstützt, wodurch Felix und Stephan zu den Ansprechpartnern im Bereich
+                                    Business werden.
+                                </p>
+                                <p class="contact"><a
+                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="team-member">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image is-128x128">
+                                    <img class="is-rounded team-member-image" src="../img/team/simon.jpg">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <p class="name">Simon Pontius</p>
+                                <p>
+                                    Durch sein Studium und großes Engagement hat Simon sich als Profi für High-end
+                                    Bereiche der IT positioniert. Er ist passionierter Gamer und ein Experte für Sound-,
+                                    Video- und Lichttechnik. Im Eventbereich organisierte er bereits große Events wie
+                                    das Hamburger Play17 Festival, ein Hearthstone Turnier sowie die regelmäßig
+                                    stattfindenden Hamburger Indie Treffs. Zu seinem Portfolio zählen außerdem noch
+                                    Livestreams von Konferenzen, Fotografie, Videoproduktionen und Programmieren.
+                                </p>
+                                <p class="contact"><a
+                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
                             </div>
                         </div>
                     </li>
