--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@ permalink: /team/
                                 </figure>
                             </div>
                             <div class="column">
-                                <p class="name">Stephan Sluppke</p>
+                                <p class="name">Stephan</p>
                                 <p>
                                     Stephan hat sich in den vergangenen zwei Jahrzehnten intensiv mit der Game- und
                                     Hardwarelandschaft auseinandergesetzt.
@@ -109,7 +109,7 @@ permalink: /team/
                                 </figure>
                             </div>
                             <div class="column">
-                                <p class="name">Felix Romanrus</p>
+                                <p class="name">Felix</p>
                                 <p>
                                     Felix bringt sein Know-How in Sachen Marketingkonzepte und Social Media ein. Seine
                                     langjährige Erfahrung im Bereich Social Media (beruflicher Background), sowie die
@@ -131,7 +131,7 @@ permalink: /team/
                                 </figure>
                             </div>
                             <div class="column">
-                                <p class="name">Simon Pontius</p>
+                                <p class="name">Simon</p>
                                 <p>
                                     Durch sein Studium und großes Engagement hat Simon sich als Profi für High-end
                                     Bereiche der IT positioniert. Er ist passionierter Gamer und ein Experte für Sound-,
@@ -139,6 +139,48 @@ permalink: /team/
                                     das Hamburger Play17 Festival, ein Hearthstone Turnier sowie die regelmäßig
                                     stattfindenden Hamburger Indie Treffs. Zu seinem Portfolio zählen außerdem noch
                                     Livestreams von Konferenzen, Fotografie, Videoproduktionen und Programmieren.
+                                </p>
+                                <p class="contact"><a
+                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="team-member">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image is-128x128">
+                                    <img class="is-rounded team-member-image" src="../img/team/julia.jpg">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <p class="name">Julia</p>
+                                <p>
+                                    Julia ist 20 Jahre alt, lebt in NRW, um genauer zu sein in Essen. Julia zockt seit
+                                    sie ein kleines Kind ist und hat es seit Kindheitstagen immer weiter intensiviert.
+                                    Inzwischen streamt sie leidenschaftlich gerne und rauscht sich zum Thema Zocken und
+                                    Gaming gerne mit der Community aus. Egal wie ihre Stimmung mal sein sollte, das
+                                    Zocken und der Austausch mit Zuschauern und anderen Gamern rettet jeden Tag.
+                                </p>
+                                <p class="contact"><a
+                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="team-member">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image is-128x128">
+                                    <img class="is-rounded team-member-image" src="../img/team/max.jpg">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <p class="name">Max</p>
+                                <p>
+                                    Max ist der junge Hüpfer des Teams und ist noch ein sog. Low Level. Trotzdem ist Max
+                                    sehr interessiert an der Gaming- und eSportsbranche und vor allem Taktikshooter
+                                    haben es ihm angetan. Max wird TwitchSquads bei dieser Gamescom als Interviewer und
+                                    Koordinator im Bezug auf Social Media unterstützen und 101% geben, sodass diese
+                                    Gamescom ein voller Erfolg für TwitchSquads wird.
                                 </p>
                                 <p class="contact"><a
                                         href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
