--- a/team.html
+++ b/team.html
@@ -21,13 +21,9 @@ permalink: /team/
         }
 
         body {
-            background: url(../img/paper-torn-uip-2.jpg) no-repeat top right fixed;
+            background: url(../img/team/skyline.jpg) no-repeat top right fixed;
             background-size: cover;
             min-height: 100%;
-        }
-
-        .hero {
-            padding-top: 40px;
         }
 
         .title {
@@ -55,9 +51,6 @@ permalink: /team/
         }
 
         @media screen and (min-width: 800px) {
-            .hero {
-                padding-top: 120px;
-            }
         }
     </style>
 </head>
