--- a/team.html
+++ b/team.html
@@ -150,7 +150,7 @@ permalink: /team/
                                 <p>
                                     Julia ist 20 Jahre alt, lebt in NRW, um genauer zu sein in Essen. Julia zockt seit
                                     sie ein kleines Kind ist und hat es seit Kindheitstagen immer weiter intensiviert.
-                                    Inzwischen streamt sie leidenschaftlich gerne und rauscht sich zum Thema Zocken und
+                                    Inzwischen streamt sie leidenschaftlich gerne und tauscht sich zum Thema Zocken und
                                     Gaming gerne mit der Community aus. Egal wie ihre Stimmung mal sein sollte, das
                                     Zocken und der Austausch mit Zuschauern und anderen Gamern rettet jeden Tag.
                                 </p>
