--- a/team.html
+++ b/team.html
@@ -21,8 +21,11 @@ permalink: /team/
         }
 
         body {
-            background: url(../img/team/skyline.jpg) no-repeat top right fixed;
+            background-image: url(../img/team/skyline.jpg);
+            background-repeat: no-repeat;
+            background-position: top right;
             background-size: cover;
+            background-attachment: fixed;
             min-height: 100%;
         }
 
