Team member roles

--- a/team.html
+++ b/team.html
@@ -49,6 +49,10 @@ permalink: /team/
             font-size: 2rem;
         }
 
+        .team-member .role {
+            font-weight: bold;
+        }
+
         .team-member .contact {
             font-weight: bold;
         }
@@ -82,6 +86,9 @@ permalink: /team/
                             </div>
                             <div class="column">
                                 <p class="name">Stephan</p>
+                                <p class="role">
+                                    Verantwortlich für Communitymanagement, Social Media und Kommunikation | Gründer von TwitchSquads
+                                </p>
                                 <p>
                                     Stephan hat sich in den vergangenen zwei Jahrzehnten intensiv mit der Game- und
                                     Hardwarelandschaft auseinandergesetzt.
@@ -106,6 +113,9 @@ permalink: /team/
                             </div>
                             <div class="column">
                                 <p class="name">Felix</p>
+                                <p class="role">
+                                    Fachkaufmann für Marketing und Social Media Manager
+                                </p>
                                 <p>
                                     Felix bringt sein Know-How in Sachen Marketingkonzepte und Social Media ein. Seine
                                     langjährige Erfahrung im Bereich Social Media (beruflicher Background), sowie die
@@ -128,6 +138,9 @@ permalink: /team/
                             </div>
                             <div class="column">
                                 <p class="name">Simon</p>
+                                <p class="role">
+                                    Lead IT-Consultant & Projektleiter / 2. Vorsitzender des Hamburger Indie Treffs
+                                </p>
                                 <p>
                                     Durch sein Studium und großes Engagement hat Simon sich als Profi für High-end
                                     Bereiche der IT positioniert. Er ist passionierter Gamer und ein Experte für Sound-,
