--- a/team.html
+++ b/team.html
@@ -56,9 +56,6 @@ permalink: /team/
         .team-member .contact {
             font-weight: bold;
         }
-
-        @media screen and (min-width: 800px) {
-        }
     </style>
 </head>
 
@@ -75,129 +72,128 @@ permalink: /team/
 
     <section class="section">
         <div class="container">
-            <p>
-                <ul>
-                    <li class="team-member">
-                        <div class="columns">
-                            <div class="column is-one-quarter">
-                                <figure class="image is-128x128">
-                                    <img class="is-rounded team-member-image" src="../img/team/stephan.jpg">
-                                </figure>
-                            </div>
-                            <div class="column">
-                                <p class="name">Stephan</p>
-                                <p class="role">
-                                    Verantwortlich für Communitymanagement, Social Media und Kommunikation | Gründer von TwitchSquads
-                                </p>
-                                <p>
-                                    Stephan hat sich in den vergangenen zwei Jahrzehnten intensiv mit der Game- und
-                                    Hardwarelandschaft auseinandergesetzt.
-                                    Das Streben nach der “Globalen Elite” und seine Passion für “ChickenDinner”
-                                    beschreiben
-                                    seine Zockerleidenschaft recht treffend.
-                                    Statistik, Sozialforschung sind nur zwei Themen, die ihm halfen TwitchSquads zu
-                                    gründen und
-                                    zu einer großen Community aufzubauen.
-                                </p>
-                                <p class="contact"><a
-                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
-                            </div>
+            <ul>
+                <li class="team-member">
+                    <div class="columns">
+                        <div class="column is-one-quarter">
+                            <figure class="image is-128x128">
+                                <img class="is-rounded team-member-image" src="../img/team/stephan.jpg">
+                            </figure>
                         </div>
-                    </li>
-                    <li class="team-member">
-                        <div class="columns">
-                            <div class="column is-one-quarter">
-                                <figure class="image is-128x128">
-                                    <img class="is-rounded team-member-image" src="../img/team/felix.jpg">
-                                </figure>
-                            </div>
-                            <div class="column">
-                                <p class="name">Felix</p>
-                                <p class="role">
-                                    Fachkaufmann für Marketing und Social Media Manager
-                                </p>
-                                <p>
-                                    Felix bringt sein Know-How in Sachen Marketingkonzepte und Social Media ein. Seine
-                                    langjährige Erfahrung im Bereich Social Media (beruflicher Background), sowie die
-                                    Spezialisierung zum Fachkaufmann für Marketing helfen dabei die TwitchSquads
-                                    Community für die Zukunft vorzubereiten. Sein Aufgabenbereich wird durch Stephan
-                                    weiter unterstützt, wodurch Felix und Stephan zu den Ansprechpartnern im Bereich
-                                    Business werden.
-                                </p>
-                                <p class="contact"><a
-                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
-                            </div>
+                        <div class="column">
+                            <p class="name">Stephan</p>
+                            <p class="role">
+                                Verantwortlich für Communitymanagement, Social Media und Kommunikation | Gründer von
+                                TwitchSquads
+                            </p>
+                            <p>
+                                Stephan hat sich in den vergangenen zwei Jahrzehnten intensiv mit der Game- und
+                                Hardwarelandschaft auseinandergesetzt.
+                                Das Streben nach der “Globalen Elite” und seine Passion für “ChickenDinner”
+                                beschreiben
+                                seine Zockerleidenschaft recht treffend.
+                                Statistik, Sozialforschung sind nur zwei Themen, die ihm halfen TwitchSquads zu
+                                gründen und
+                                zu einer großen Community aufzubauen.
+                            </p>
+                            <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a>
+                            </p>
                         </div>
-                    </li>
-                    <li class="team-member">
-                        <div class="columns">
-                            <div class="column is-one-quarter">
-                                <figure class="image is-128x128">
-                                    <img class="is-rounded team-member-image" src="../img/team/simon.jpg">
-                                </figure>
-                            </div>
-                            <div class="column">
-                                <p class="name">Simon</p>
-                                <p class="role">
-                                    Lead IT-Consultant & Projektleiter / 2. Vorsitzender des Hamburger Indie Treffs
-                                </p>
-                                <p>
-                                    Durch sein Studium und großes Engagement hat Simon sich als Profi für High-end
-                                    Bereiche der IT positioniert. Er ist passionierter Gamer und ein Experte für Sound-,
-                                    Video- und Lichttechnik. Im Eventbereich organisierte er bereits große Events wie
-                                    das Hamburger Play17 Festival, ein Hearthstone Turnier sowie die regelmäßig
-                                    stattfindenden Hamburger Indie Treffs. Zu seinem Portfolio zählen außerdem noch
-                                    Livestreams von Konferenzen, Fotografie, Videoproduktionen und Programmieren.
-                                </p>
-                                <p class="contact"><a
-                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
-                            </div>
+                    </div>
+                </li>
+                <li class="team-member">
+                    <div class="columns">
+                        <div class="column is-one-quarter">
+                            <figure class="image is-128x128">
+                                <img class="is-rounded team-member-image" src="../img/team/felix.jpg">
+                            </figure>
                         </div>
-                    </li>
-                    <li class="team-member">
-                        <div class="columns">
-                            <div class="column is-one-quarter">
-                                <figure class="image is-128x128">
-                                    <img class="is-rounded team-member-image" src="../img/team/julia.jpg">
-                                </figure>
-                            </div>
-                            <div class="column">
-                                <p class="name">Julia</p>
-                                <p>
-                                    Julia ist 20 Jahre alt, lebt in NRW, um genauer zu sein in Essen. Julia zockt seit
-                                    sie ein kleines Kind ist und hat es seit Kindheitstagen immer weiter intensiviert.
-                                    Inzwischen streamt sie leidenschaftlich gerne und tauscht sich zum Thema Zocken und
-                                    Gaming gerne mit der Community aus. Egal wie ihre Stimmung mal sein sollte, das
-                                    Zocken und der Austausch mit Zuschauern und anderen Gamern rettet jeden Tag.
-                                </p>
-                                <p class="contact"><a
-                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
-                            </div>
+                        <div class="column">
+                            <p class="name">Felix</p>
+                            <p class="role">
+                                Fachkaufmann für Marketing und Social Media Manager
+                            </p>
+                            <p>
+                                Felix bringt sein Know-How in Sachen Marketingkonzepte und Social Media ein. Seine
+                                langjährige Erfahrung im Bereich Social Media (beruflicher Background), sowie die
+                                Spezialisierung zum Fachkaufmann für Marketing helfen dabei die TwitchSquads
+                                Community für die Zukunft vorzubereiten. Sein Aufgabenbereich wird durch Stephan
+                                weiter unterstützt, wodurch Felix und Stephan zu den Ansprechpartnern im Bereich
+                                Business werden.
+                            </p>
+                            <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a>
+                            </p>
                         </div>
-                    </li>
-                    <li class="team-member">
-                        <div class="columns">
-                            <div class="column is-one-quarter">
-                                <figure class="image is-128x128">
-                                    <img class="is-rounded team-member-image" src="../img/team/max.jpg">
-                                </figure>
-                            </div>
-                            <div class="column">
-                                <p class="name">Max</p>
-                                <p>
-                                    Max ist der junge Hüpfer des Teams und ist noch ein sog. Low Level. Trotzdem ist Max
-                                    sehr interessiert an der Gaming- und eSportsbranche und vor allem Taktikshooter
-                                    haben es ihm angetan. Max wird TwitchSquads bei dieser Gamescom als Interviewer und
-                                    Koordinator im Bezug auf Social Media unterstützen und 101% geben, sodass diese
-                                    Gamescom ein voller Erfolg für TwitchSquads wird.
-                                </p>
-                                <p class="contact"><a
-                                        href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a></p>
-                            </div>
+                    </div>
+                </li>
+                <li class="team-member">
+                    <div class="columns">
+                        <div class="column is-one-quarter">
+                            <figure class="image is-128x128">
+                                <img class="is-rounded team-member-image" src="../img/team/simon.jpg">
+                            </figure>
                         </div>
-                    </li>
-                </ul>
-            </p>
+                        <div class="column">
+                            <p class="name">Simon</p>
+                            <p class="role">
+                                Lead IT-Consultant & Projektleiter / 2. Vorsitzender des Hamburger Indie Treffs
+                            </p>
+                            <p>
+                                Durch sein Studium und großes Engagement hat Simon sich als Profi für High-end
+                                Bereiche der IT positioniert. Er ist passionierter Gamer und ein Experte für Sound-,
+                                Video- und Lichttechnik. Im Eventbereich organisierte er bereits große Events wie
+                                das Hamburger Play17 Festival, ein Hearthstone Turnier sowie die regelmäßig
+                                stattfindenden Hamburger Indie Treffs. Zu seinem Portfolio zählen außerdem noch
+                                Livestreams von Konferenzen, Fotografie, Videoproduktionen und Programmieren.
+                            </p>
+                            <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="team-member">
+                    <div class="columns">
+                        <div class="column is-one-quarter">
+                            <figure class="image is-128x128">
+                                <img class="is-rounded team-member-image" src="../img/team/julia.jpg">
+                            </figure>
+                        </div>
+                        <div class="column">
+                            <p class="name">Julia</p>
+                            <p>
+                                Julia ist 20 Jahre alt, lebt in NRW, um genauer zu sein in Essen. Julia zockt seit
+                                sie ein kleines Kind ist und hat es seit Kindheitstagen immer weiter intensiviert.
+                                Inzwischen streamt sie leidenschaftlich gerne und tauscht sich zum Thema Zocken und
+                                Gaming gerne mit der Community aus. Egal wie ihre Stimmung mal sein sollte, das
+                                Zocken und der Austausch mit Zuschauern und anderen Gamern rettet jeden Tag.
+                            </p>
+                            <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="team-member">
+                    <div class="columns">
+                        <div class="column is-one-quarter">
+                            <figure class="image is-128x128">
+                                <img class="is-rounded team-member-image" src="../img/team/max.jpg">
+                            </figure>
+                        </div>
+                        <div class="column">
+                            <p class="name">Max</p>
+                            <p>
+                                Max ist der junge Hüpfer des Teams und ist noch ein sog. Low Level. Trotzdem ist Max
+                                sehr interessiert an der Gaming- und eSportsbranche und vor allem Taktikshooter
+                                haben es ihm angetan. Max wird TwitchSquads bei dieser Gamescom als Interviewer und
+                                Koordinator im Bezug auf Social Media unterstützen und 101% geben, sodass diese
+                                Gamescom ein voller Erfolg für TwitchSquads wird.
+                            </p>
+                            <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
