--- a/team.html
+++ b/team.html
@@ -172,6 +172,27 @@ permalink: /team/
                     <div class="columns">
                         <div class="column is-one-quarter">
                             <figure class="image is-128x128">
+                                <img class="is-rounded team-member-image" src="../img/team/thilo.jpg">
+                            </figure>
+                        </div>
+                        <div class="column">
+                            <p class="name">Thilo</p>
+                            <p>
+                                Thilo ist ein bekennender Vielspieler und hat nach seinem Studium der Sozialwissenschaften
+                                seine Vorliebe zum Beruf gemacht. Er ist Mitorganisator des Playfestivals und dort Orts-
+                                und Produktionsverantwortlicher. Als Medienpädagoge organisiert er verschiedenste Veranstaltungen,
+                                Workshops und Ausstellungen.
+                                Für Twitchsquads führt er Interviews oder hilft bei der Koordination und Kommunikation.
+                            </p>
+                            <p class="contact"><a href="mailto:contact@twitchsquads.com">contact@twitchsquads.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="team-member">
+                    <div class="columns">
+                        <div class="column is-one-quarter">
+                            <figure class="image is-128x128">
                                 <img class="is-rounded team-member-image" src="../img/team/julia.jpg">
                             </figure>
                         </div>
