Team: Thilo's role

--- a/team.html
+++ b/team.html
@@ -177,6 +177,9 @@ permalink: /team/
                         </div>
                         <div class="column">
                             <p class="name">Thilo</p>
+                            <p class="role">
+                                Produktionsleiter / Kommunikation und Moderation / Medienpädagoge
+                            </p>
                             <p>
                                 Thilo ist ein bekennender Vielspieler und hat nach seinem Studium der Sozialwissenschaften
                                 seine Vorliebe zum Beruf gemacht. Er ist Mitorganisator des Playfestivals und dort Orts-
